--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
 </style>
 </head>
-<body bgcolor="eed7c5" style="color: rgb(5, 5, 5);">
+<body "bgcolor="fff09"">
 <h1><mark>برنامه نویسی html</mark></h1><hr>
 <details>
 
