--- a/index.html
+++ b/index.html
@@ -4,35 +4,6 @@
     <link rel="https://amirh88amir88.github.io/web/">
 <title>amir-7-hashtrodi</title>
 <meta charset="utf_8">
-
-
-<script language="javascript">
-    //$(document).ready(function ($) {
-    //    //alert('1');
-    //    $("#myModal").modal();
-
-    //});
-
-    function RefreshImage(valImageId) {
-        var objImage = document.images[valImageId];
-        if (objImage == undefined) {
-            return;
-        }
-        var now = new Date();
-        objImage.src = objImage.src.split('?')[0] + '?x=' + now.toUTCString();
-    }
-    function OnMoreInfoClick(contentUrl) {
-        clientPopupControl.SetContentUrl(contentUrl);
-        clientPopupControl.Show();
-    }
-
-
-
-</script>
-
-
-
-
 <style>
     table{
         width: 50%;
@@ -48,7 +19,7 @@
 
 <details>
 
-    <summary><strong>>جهت خواندن توضیح</strong</summary>
+    <summary><strong>جهت خواندن توضیح</strong></summary>
 <h3> احتمالاً در رسانه‌های مختلف یا مجامعی که حضور داشته‌اید نام برنامه‌ نویسی به گوش شما خورده است. معمولاً زمانی که اسم برنامه نویسی به زبان می‌آید تصورات جالبی در ذهن مخاطبین شکل می‌گیرد!! ممکن است عده‌ای به یاد فیلم‌های سینمایی بیفتند و هک سیستم‌های بانکی و موشکی و… را به خاطر بیاورند!
     بعضی هم یک اتاق تاریک و یک شخصی که در صفحه‌ای مشکی‌ِ یک کامپیوتر قدرتمند (خفن!) در حال نوشتن کدهای سبز و آبی است را به ذهن بیاورند! اما در دنیای واقعی برنامه‌نویسان الزاماً اینگونه نیستند! اگر می خواهید بدانید معنای واقعی برنامه نویسی چیست؟ و به چه کسی برنامه نویس می‌گویند در این مقاله همراه ما باشید تا این مفهوم را بررسی کنیم.</h3>
 <br>
