--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         border:2px solid #e41515;
     }
 </style>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <center><h1>برنامه نویسی html</h1></center>
 <body bgcolor="fff09">
